<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:text="@string/author"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_author"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:autoLink="web"
        android:text="@string/url"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView_powered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_url"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/powered" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/textView_powered"
        android:layout_marginTop="5dp"
        android:background="#bbbbbb"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontalLine"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/blank_button_selector"
        android:text="@string/ok" />

</RelativeLayout>